<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2DFDB"
    android:orientation="vertical"
    tools:context="com.bestchinesefoodinlafayettearea.MainActivity">


    <Button
        android:id="@+id/btnFood1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/btnFood1"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnFood2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/btnFood1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btnFood2"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnFood3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/btnFood2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btnFood3"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnFood4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/btnFood3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btnFood4"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnFood5"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/btnFood4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btnFood5"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnFood6"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignEnd="@+id/btnFood5"
        android:layout_alignRight="@+id/btnFood5"
        android:layout_below="@+id/btnFood5"
        android:layout_marginTop="20dp"
        android:text="@string/btnFood6"
        android:textSize="16sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-1281884198990540/4029600119"
            ads:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="-4dp"
            tools:layout_editor_absoluteY="68dp"></com.google.android.gms.ads.AdView>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
